--- a/HTML/Contacto.html
+++ b/HTML/Contacto.html
@@ -98,7 +98,7 @@
         <p>Copyright © 2023. Grupo C - Argentina Programa 4.0</p>
     </footer>
 
-    <script src="/JS/TPfinal.js"></script>
+    <script src="/JS/ValidarEmail.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js "
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
     crossorigin="anonymous"></script>
