--- a/HTML/Sucursal.html
+++ b/HTML/Sucursal.html
@@ -10,6 +10,7 @@
     crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/CSS/TPfinal.css">
+    <link rel="stylesheet" href="/CSS/estilo-mapa.css">
     <title>Sucursal</title>
 </head>
 <body>
@@ -30,13 +31,17 @@
         </div>
     </header>
 
-    <main></main>
+    <main>
+        <div id="map-container">
+            <div id="map"></div>
+        </div>
+    </main>
 
     <footer>
         <p>Copyright © 2023. Grupo C - Argentina Programa 4.0</p>
     </footer>
 
-    <script src="/JS/TPfinal.js"></script>
+    <script src="/JS/APImapa.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js "
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
     crossorigin="anonymous"></script>
