Página de contacto completo

--- a/HTML/Inicio.html
+++ b/HTML/Inicio.html
@@ -37,7 +37,12 @@
     </header>
 
     <main>
-        <div class="contenedor">
+
+        <div class="d-flex justify-content-center">
+        <h1>NUESTROS PRODUCTOS</h1>
+        </div>
+
+        <div class="d-flex justify-content-around">
                 <div class="container-producto">
                     <img src="" alt="">
                     <h3>producto</h3>
