--- a/HTML/Contacto.html
+++ b/HTML/Contacto.html
@@ -14,27 +14,28 @@
 </head>
 <body>
     
-    <header>
-        <div class="d-flex">
-        <div id="logo" class="d-flex">
-            <img src="/IMG/Logo.png" alt="">
-        </div>
+    <header class="header">
+      <div class="container">
+        <div class="row justify-content-between">
+          <div class="col-xl-1 col-lg-1 col-sm-12  p-1 pt-sm-2 d-flex justify-content-sm-evenly justify-content-around">
+            <div id="logo" class="logo">
+              <a href="Inicio.html"><img src="/IMG/Logo.png" alt="Logo" /></a>
+            </div>
+          </div>
 
-        <!-- <div class="d-flex justify-content-center">
-            <form id="buscador" action="" method="get">
-                <input type="text" placeholder="Buscar">
-                <button type="submit"><i class="bi bi-search"></i></button>
-            </form>
-            </div>-->
-
-        <nav class="navegador">
-            <ul>
+          <div
+            class="col-xl-4 col-lg-4 col-sm-12 d-flex align-items-center justify-content-evenly"
+          >
+            <nav class="d-flex justify-content-around">
+              <ul class="p-0 m-0 d-flex">
                 <li><a href="Inicio.html">Inicio</a></li>
                 <li><a href="Contacto.html">Contacto</a></li>
                 <li><a href="Sucursal.html">Sucursal</a></li>
-            </ul>
-        </nav>
+              </ul>
+            </nav>
+          </div>
         </div>
+      </div>
     </header>
 
     <main>
@@ -44,7 +45,6 @@
 
         <div class="container">
 
-            <form id="form" action="" >
 
             <div class="row">
 
@@ -98,7 +98,7 @@
 
     </main>
 
-    <footer>
+    <footer class="mt-5">
         <p>Copyright © 2023. Grupo C - Argentina Programa 4.0</p>
     </footer>
 
