--- a/HTML/Sucursal.html
+++ b/HTML/Sucursal.html
@@ -15,21 +15,29 @@
 </head>
 <body>
 
-    <header>
-        <div class="d-flex">
-        <div id="logo" class="d-flex">
-            <img src="/IMG/Logo.png" alt="">
+    <header class="header">
+        <div class="container">
+          <div class="row justify-content-between">
+            <div class="col-xl-1 col-lg-1 col-sm-12  p-1 pt-sm-2 d-flex justify-content-sm-evenly justify-content-around">
+              <div id="logo" class="logo">
+                <a href="Inicio.html"><img src="/IMG/Logo.png" alt="Logo" /></a>
+              </div>
+            </div>
+  
+            <div
+              class="col-xl-4 col-lg-4 col-sm-12 d-flex align-items-center justify-content-evenly"
+            >
+              <nav class="d-flex justify-content-around">
+                <ul class="p-0 m-0 d-flex">
+                  <li><a href="Inicio.html">Inicio</a></li>
+                  <li><a href="Contacto.html">Contacto</a></li>
+                  <li><a href="Sucursal.html">Sucursal</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
         </div>
-
-        <nav class="navegador">
-            <ul>
-                <li><a href="Inicio.html">Inicio</a></li>
-                <li><a href="Contacto.html">Contacto</a></li>
-                <li><a href="Sucursal.html">Sucursal</a></li>
-            </ul>
-        </nav>
-        </div>
-    </header>
+      </header>
 
     <main>
         <div id="map-container">
