--- a/HTML/Sucursal.html
+++ b/HTML/Sucursal.html
@@ -9,9 +9,11 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
     crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <link rel="stylesheet" href="/CSS/TPfinal.css">
     <link rel="stylesheet" href="/CSS/estilo-mapa.css">
     <title>Sucursal</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 </head>
 <body>
 
@@ -35,7 +37,7 @@
         <div id="map-container">
             <div id="map"></div>
         </div>
-
+    
         <P>Cerviño 4719, Isidro Casanova</P>
         <p>ABRIMOS TODOS LOS DÍAS</p>
         <P>Lunes a sábados de las 9:30 a 13:30 y de 17:30 a 20:30</P>
@@ -47,6 +49,7 @@
         <p>Copyright © 2023. Grupo C - Argentina Programa 4.0</p>
     </footer>
 
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="/JS/APImapa.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js "
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
