arreglo de caja de productos

--- a/HTML/Inicio.html
+++ b/HTML/Inicio.html
@@ -51,33 +51,33 @@
         <div class="d-flex justify-content-around">
                 
                 <div class="container-producto">
-                    <img src="" alt="">
-                    <h3>producto</h3>
-                    <p>descripcion</p>
+                    <img src="https://www.pedigree.com.ar/cdn-cgi/image/format=auto,q=90/sites/g/files/fnmzdf1506/files/2022-10/7797453972536-product-image-1.png" alt="">
+                    <h3>Pedigree adulto 21kg</h3>
+                    <p>Precio: $9990</p>
                     <a href="">Ver más</a>
                 </div>
                 <div class="container-producto">
-                    <img src="" alt="">
-                    <h3>producto</h3>
-                    <p>descripcion</p>
+                    <img src="https://www.pedigree.com.ar/sites/g/files/fnmzdf1506/files/2022-10/7797453001519-product-image-1.png" alt="">
+                    <h3>Pedigree cachorro 21kg</h3>
+                    <p>Precio: $10750</p>
                     <a href="">Ver más</a>
                 </div>
                 <div class="container-producto">
-                    <img src="" alt="">
-                    <h3>producto</h3>
-                    <p>descripcion</p>
+                    <img src="https://www.whiskas.com.ar/cdn-cgi/image/format=auto,q=90/sites/g/files/fnmzdf2296/files/2022-12/7797453972345-product-image-1.png" alt="">
+                    <h3>Whiskas 10kg</h3>
+                    <p>Precio: $8250</p>
                     <a href="">Ver más</a>
                 </div>
                 <div class="container-producto">
-                    <img src="" alt="">
-                    <h3>producto</h3>
-                    <p>descripcion</p>
+                    <img src="https://cdn.shopify.com/s/files/1/0550/6252/8170/products/alimento-gato-adulto-purina-cat-chow-pescado-y-pollo_1024x.png?v=1671652860" alt="">
+                    <h3>Cat Chow 15kg</h3>
+                    <p>Precio: $12300</p>
                     <a href="">Ver más</a>
                 </div>
                 <div class="container-producto">
-                    <img src="" alt="">
-                    <h3>producto</h3>
-                    <p>descripcion</p>
+                    <img src="https://www.purina.com.ar/sites/default/files/styles/webp/public/2023-04/dog-chow-puppy-minis-carne-pollo-front.png.webp?itok=3fy22w8V" alt="">
+                    <h3>Dog Chow cachorro 21kg</h3>
+                    <p>Precio: $11000</p>
                     <a href="">Ver más</a>
                 </div>
         </div>
@@ -111,9 +111,7 @@
                 </div>
 
                 <div class="col">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, doloribus ex? Aspernatur itaque amet 
-                    recusandae cumque eaque nihil inventore nisi voluptas ducimus excepturi nulla aut, consequatur veniam 
-                    doloremque assumenda repellendus? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto quae molestias aperiam possimus laborum pariatur amet neque explicabo maiores asperiores aspernatur quidem unde cumque qui repellat, sit itaque similique doloribus.</p>
+                    <p>DOGKING es un emprendimiento familiar, que crecio día a día gracias a la confianza de nuestros clientes que nos eligen desde hace tres años. Nuestro objetivo no solo es vender alimento balanceado, sino hacer a las mascotas felices.</p>
                 </div>
             </div>
         </div>
